@@ -1,2 +1,5 @@
+2
+- Fix default config.yml
+
 1
 - Initial add-on
